<resources>
    <string name="app_name">GitHub User</string>
    <string name="search">Search</string>
    <string name="language">Change language</string>
    <string name="username">Username</string>
    <string name="search_here">Search Here</string>
    <string name="please_search_a_user">Please search a User</string>
    <string name="not_found">Not found</string>
    <string name="type">Type</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="company_user">Company User</string>
    <string name="location">Location</string>
    <string name="name_user">Name User</string>
    <string name="repository">Repository</string>
    <string name="repository_user">Repository User</string>
    <string name="followers_title">Followers</string>
    <string name="following_title">Following</string>
    <string name="followers">Followers %d</string>
    <string name="following">Following %d</string>

</resources>